  sqlobject/tests/test_sqlobject_admin.py or at
  <http://sqlobject.org/sqlobject-admin.html#the-create-command>

* Added method ``sqlhub.doInTransaction(callable, *args, **kwargs)``,
  to be used like::

      sqlhub.doInTransaction(process_request, os.environ)

  This will run ``process_request(os.environ)``.  The return
  value will be preserved.

SQLObject 0.7.1
===============

* Added ``TimeCol``.

* Added support for psycopg2_

.. _psycopg2: http://initd.org/projects/psycopg2

SQLObject 0.7.0
===============

Features & Interface
--------------------

* Inheritance. See Inheritance.html_

.. _Inheritance.html: Inheritance.html

* Date/time validators, converters, tests.

* Both `mxDateTime
  <http://www.egenix.com/files/python/mxDateTime.html>`_ and `datetime
  <http://python.org/doc/current/lib/module-datetime.html>`_ supported
  for ``DateTimeCol``.

* Added ``BLOBCol``, for binary data.

* Added ``PickleCol``, to transparently pickle and unpickle data from
  column.

* New `documented reflection interface
  <http://sqlobject.org/docs/interface.py.html>`_, using the new
  ``.sqlmeta`` class/instance.  Most special attributes that started
  with ``_`` were moved into ``sqlmeta`` (with leading underscore
  removed).

* New aggregate functions for select results, like
  ``cls.select().max(columnName)``: ``.max()``, ``.min()``,
  ``.avg()``.

* ``ConnectionHub`` aka ``sqlhub`` (@@: Needs documentation)

* Command-line client `sqlobject-admin
  <http://sqlobject.org/docs/sqlobject-admin.html>`_.

* ``StringCol`` has ``char_binary`` attribute, for explicit case
  handling in MySQL.

* Various joins now supported (LEFT, RIGHT, STRAIGHT, INNER, OUTER,
  CROSS): see `documentation
  <http://sqlobject.org/docs/SQLObject.html#left-join-and-other-joins>`_.
  Aliases for joining a table with itself.

* Subqueries/subselects (`see docs
  <http://sqlobject.org/docs/SQLObject.html#subqueries-subselects>`_).

* Select results support ``.filter(extra_query)``
